--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,12 @@
   color: #666;
 }
 
+.music-album {
+  margin: 0;
+  font-size: 1em;
+  color: #666;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
