--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
 }
 
 .container {
@@ -16,6 +15,8 @@
 }
 
 .card-form {
+  display: flex;
+  flex-direction: column;
   border-right: 1px solid black;
 }
 
@@ -27,9 +28,11 @@
 }
 
 .music-form--input {
-  padding: 12px;
+  padding: 8px 6px;
   margin: 4px 0;
   border-radius: 6px;
+  border-color: rgba(0, 0, 0, .2);
+  outline: none;
 }
 
 .add-button {
@@ -37,7 +40,7 @@
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   cursor: pointer;
-  margin-top: 12px;
+  margin: 0 auto;
   transition: all 0.2s linear;
 }
 
