--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,18 @@
   padding: 2rem;
 }
 
+.heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.signout-button {
+  padding: 5px 6px;
+  margin: 2px 10px;
+  border-radius: 4px;
+}
+
 .container {
   display: flex;
   justify-content: space-around;
